--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -54,6 +54,7 @@ const iframeId = `iframe-${index}`;
 
 <style>
   .project-card p {
+  padding: 1rem;
   margin-bottom: 1rem;
   flex-grow: 1; /* Allow description to push button down */
   font-size: 0.95rem;
